feature: merge from main and some renaming changes
