# services/store/src/main/java/com/backbase/goldensample/store/api/StoreClientApiController.java
@@ -1,99 +1,61 @@
 package com.backbase.goldensample.store.api;
 
 import com.backbase.buildingblocks.presentation.errors.NotFoundException;
-import com.backbase.goldensample.product.api.client.v1.model.Product;
-import com.backbase.goldensample.product.api.client.v1.model.ProductId;
-import com.backbase.goldensample.review.api.client.v1.model.Review;
-import com.backbase.goldensample.review.api.client.v1.model.ReviewId;
 import com.backbase.goldensample.store.api.service.v1.ProductCompositeClientApi;
 import com.backbase.goldensample.store.api.service.v1.model.ProductAggregate;
-import com.backbase.goldensample.store.api.service.v1.model.ReviewSummary;
+import com.backbase.goldensample.store.config.StoreViewConfig;
+import com.backbase.goldensample.store.domain.Product;
+import com.backbase.goldensample.store.mapper.StoreMapper;
 import com.backbase.goldensample.store.service.ProductCompositeService;
-import java.time.LocalDate;
-import java.util.ArrayList;
-import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Optional;
 import javax.validation.Valid;
+import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
+import org.springframework.http.ResponseEntity.BodyBuilder;
 import org.springframework.web.bind.annotation.RestController;
 
 @RestController
 @Slf4j
+@RequiredArgsConstructor
 public class StoreClientApiController implements ProductCompositeClientApi {
 
-    private ProductCompositeService productCompositeService;
-
-    @Autowired
-    public StoreClientApiController(ProductCompositeService productCompositeService) {
-        this.productCompositeService = productCompositeService;
-    }
-
+    private final ProductCompositeService productCompositeService;
+    private final StoreViewConfig storeViewConfig;
+    private final StoreMapper storeMapper;
 
     @Override
     public ResponseEntity<ProductAggregate> getProductById(Long productId) {
         log.debug("getCompositeProduct: lookup a product aggregate for productId: {}", productId);
 
-        Product product = productCompositeService.getProduct(productId);
-        if (product == null) {
+        Optional<Product> product = productCompositeService.retrieveProductWithReviews(productId);
+        if (product.isEmpty()) {
             log.debug("No product was found for id {}", productId);
             throw new NotFoundException("No product found for productId: " + productId);
         }
 
-        List<Review> reviews = productCompositeService.getReviews(productId);
-
-        log.debug("getCompositeProduct: aggregate entity found for productId: {}", productId);
-
-        return ResponseEntity.ok(createProductAggregate(product, reviews));
+        return withThemeHeader(ResponseEntity.ok()).body(storeMapper.map(product.get()));
     }
+
 
     @Override
     public ResponseEntity<ProductAggregate> postProduct(@Valid ProductAggregate productAggregate) {
 
+        // ensure the client does not specify the id.
+        productAggregate.setProductId(null);
+        // LOL
         log.debug("createCompositeProduct: creates a new composite entity for productId: {}",
             productAggregate.getProductId());
 
-        Product product = new Product().name(productAggregate.getName()).weight(productAggregate.getWeight()).createDate(productAggregate.getCreateDate());
-        ProductId productId = productCompositeService.createProduct(product);
-        product.productId(productId.getId());
-
-        List<Review> reviews = new ArrayList<>();
-        if (productAggregate.getReviews() != null) {
-            productAggregate.getReviews().forEach(r -> {
-                Review review =
-                    new Review().productId(productId.getId()).author(r.getAuthor()).subject(r.getSubject())
-                        .content(r.getContent());
-                ReviewId reviewId = productCompositeService.createReview(review);
-                review.reviewId(reviewId.getId());
-                reviews.add(review);
-            });
-        }
+        Product product = productCompositeService.createProductWithReviews(storeMapper.map(productAggregate));
         log.debug("createCompositeProduct: composite entities created for productId: {}",
-            productAggregate.getProductId());
+            product.getProductId());
 
-        return ResponseEntity.ok(createProductAggregate(product, reviews));
-
+        return withThemeHeader(ResponseEntity.ok()).body(storeMapper.map(product));
     }
 
-    private ProductAggregate createProductAggregate(Product product, List<Review> reviews) {
-
-        // 1. Setup product info
-        long productId = product.getProductId();
-        String name = product.getName();
-        int weight = product.getWeight();
-        LocalDate createDate = product.getCreateDate();
-
-        // 2. Copy summary review info, if available
-        List<ReviewSummary> reviewSummaries = (reviews == null) ? null :
-            reviews.stream()
-                .map(r -> new ReviewSummary().reviewId(r.getReviewId()).author(r.getAuthor()).subject(r.getSubject())
-                    .content(r.getContent()))
-                .collect(Collectors.toList());
-
-        return new ProductAggregate().productId(productId).name(name).weight(weight).reviews(reviewSummaries)
-            .createDate(createDate);
+    private BodyBuilder withThemeHeader(BodyBuilder responseEntity) {
+        return responseEntity.header(StoreViewConfig.STORE_THEME_RESPONSE_HEADER_NAME, storeViewConfig.getTheme());
     }
+
 }
